
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Ivory"
    tools:context="com.example.arjun.codefundo.MainActivity">


    <TextView
        android:text="DAY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_alignBaseline="@+id/editday"
        android:layout_alignBottom="@+id/editday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:id="@+id/button_viewAll"
        android:background="@color/LightSteelBlue"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/button_update"
        android:layout_marginTop="21dp"
        android:background="@color/LightSteelBlue"
        android:layout_below="@+id/button"
        android:layout_toLeftOf="@+id/button_viewAll"
        android:layout_toStartOf="@+id/button_viewAll" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/button_delete"
        android:layout_above="@+id/button_clear"
        android:background="@color/LightSteelBlue"
        android:layout_alignLeft="@+id/button_viewAll"
        android:layout_alignStart="@+id/button_viewAll" />

    <Button
        android:text="CLEAR ALL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/LightSteelBlue"
        android:id="@+id/button_clear"
        android:layout_below="@+id/button_update"
        android:layout_alignLeft="@+id/button_update"
        android:layout_alignStart="@+id/button_update"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="ID"
        android:id="@+id/textView_id"
        android:layout_below="@+id/editsubject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_ID"
        android:layout_alignTop="@+id/textView_id"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/edittime"
        android:layout_alignEnd="@+id/edittime"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/edittime"
        android:layout_alignStart="@+id/edittime" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:ems="10"
        android:id="@+id/edittime"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="TIME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignBottom="@+id/edittime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginTop="32dp"
        android:id="@+id/editsubject"
        android:layout_below="@+id/edittime"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:text="SUBJECT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignTop="@+id/editsubject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_camera"
        android:layout_alignBaseline="@+id/button_clear"
        android:background="@color/LightSteelBlue"
        android:layout_alignBottom="@+id/button_clear"
        android:layout_alignLeft="@+id/button_delete"
        android:layout_alignStart="@+id/button_delete"
        android:onClick="newWindow" />

    <Button
        android:text="@string/add_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/button"
        android:background="@color/LightSteelBlue"
        android:layout_below="@+id/editText_ID"
        android:layout_toLeftOf="@+id/editsubject"
        android:layout_toStartOf="@+id/editsubject" />



</RelativeLayout>



